<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kildeen</groupId>
    <artifactId>sps</artifactId>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>sps-publish</module>
        <module>sps-subscribe</module>
        <module>sps-dependency-bundle</module>
        <module>sps-api</module>
        <module>sps-schemagen</module>
        <module>sps-inlet</module>
        <module>sps-persistance</module>
        <module>sps-test</module>
        <module>sps-json</module>
        <module>sps-standard-libs</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit-jupiter.version>5.8.2</junit-jupiter.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <slf4j.version>1.7.25</slf4j.version>
        <log4j-api.version>2.11.0</log4j-api.version>

        <jacoco.version>0.8.3</jacoco.version>
        <pitest.version>1.4.0</pitest.version>
        <pitest-junit5-plugin.version>0.5</pitest-junit5-plugin.version>
        <junit.jupiter.version>5.4.0</junit.jupiter.version>
        <junit.platform.version>1.4.0</junit.platform.version>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-lang</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-unit-test-bundle</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-postgres-bundle</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-jackson-bundle</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-embedded-db</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-api</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-adapter-bundle</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.kildeen</groupId>
                <artifactId>sps-server-bundle</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>11.0.0</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.apache.meecrowave.runner.Cli</mainClass>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <mainClass>com.superbiz.jaxrs.Start</mainClass>
                    <skip>false</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.9.11</version>
                <configuration>
                    <targetClasses>
                        <param>com.kildeen.*</param>
                    </targetClasses>
                    <targetTests>
                        <param>com.kildeen.*</param>
                    </targetTests>
                </configuration>
            </plugin>
        </plugins>

    </build>

</project>